Fix mobile version

--- a/queries.css
+++ b/queries.css
@@ -1,4 +1,4 @@
-@media (max-width: 111.6em) {
+/* @media (max-width: 111.6em) {
   html {
     font-size: 9px;
   }
@@ -414,4 +414,4 @@
     width: 77rem;
     margin-left: 13rem;
   }
-}
+} */
