--- a/style.css
+++ b/style.css
@@ -15,13 +15,14 @@ body {
   color: #555;
 }
 
-.header {
+/* .header {
   display: flex;
   justify-content: space-around;
   align-items: center;
   background: #3e3c3c;
   height: 9.6rem;
   padding: 0;
+  width: 100%;
 }
 
 .main-nav-list {
@@ -29,10 +30,55 @@ body {
   display: flex;
   align-items: center;
   gap: 3.2rem;
-  margin-left: 50rem;
+}
+*/
+
+.header {
+  display: none;
 }
 
-.main-nav-link:link,
+.phone-toolbar ul {
+  display: flex;
+  list-style: none;
+  height: 9rem;
+  width: 100%;
+  background: #3c3a39;
+  justify-content: space-between;
+  align-items: center;
+  position: absolute;
+  padding: 0 5rem 0 3rem;
+}
+
+.logo-name {
+  width: 7.7rem;
+  height: 2.4rem;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 1.8rem;
+  line-height: 2.4rem;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  color: white;
+  text-decoration: none;
+}
+
+.menu-button {
+  font-size: 6rem;
+  height: 1.2rem;
+  width: 3rem;
+  background-color: #3c3a39;
+  color: white;
+  border: none;
+  display: flex;
+  align-items: center;
+  text-align: center;
+}
+
+/* .phone-toolbar {
+  display: none; */
+
+/* .main-nav-link:link,
 .main-nav-link:visited {
   display: inline-block;
   text-decoration: none;
@@ -45,8 +91,9 @@ body {
 .main-nav-link:hover,
 .main-nav-link:active {
   color: #cf711f;
-}
+} */
 
+/* 
 .header-name {
   color: white;
   text-decoration: none;
@@ -65,33 +112,29 @@ body {
 .header-name:hover,
 .header-name:active {
   color: #cf711f;
-}
+} */
 
 .main-page {
   display: grid;
-  grid-template-columns: 1fr 6fr 7fr;
+  grid-template-columns: 1fr;
   margin: 0;
   padding: 0;
+  padding-top: 10rem;
+  padding-left: 3rem;
   background: #1c1a19;
   align-items: center;
 }
 
-.main-page img {
-  margin-left: 20rem;
-  width: 70rem;
-  height: 87rem;
-}
-
 .main-text {
-  padding-left: 5rem;
+  order: -1;
 }
 
 .main-text h1 {
   font-family: "Crete Round", sans-serif;
   font-style: normal;
   font-weight: 400;
-  font-size: 7.2rem;
-  line-height: 8.2rem;
+  font-size: 5.6rem;
+  line-height: 6.4rem;
   color: #f55800;
 }
 
@@ -99,8 +142,8 @@ body {
   font-family: "Inter", sans-serif;
   font-style: normal;
   font-weight: 500;
-  font-size: 3.2rem;
-  line-height: 4.4rem;
+  font-size: 2.4rem;
+  line-height: 3.2rem;
   color: rgb(255, 255, 255);
   padding-top: 2rem;
 }
@@ -109,20 +152,20 @@ body {
   font-family: "Inter", sans-serif;
   font-style: normal;
   font-weight: 400;
-  font-size: 2rem;
-  line-height: 3.2rem;
+  font-size: 1.6rem;
+  line-height: 2.4rem;
   color: white;
   padding-top: 2rem;
 }
 
 .social-icons {
   display: flex;
-  flex-direction: column;
   gap: 2rem;
   align-items: center;
   list-style: none;
   margin: 0;
   padding: 0;
+  padding-top: 2rem;
 }
 
 .social-icon-item {
@@ -132,65 +175,66 @@ body {
   font-size: 2.5rem;
 }
 
-.my-work h2 {
+.main-page img {
   display: inline-block;
-  margin: 10rem 5rem;
+  width: 55%;
+  height: 120%;
+  margin-left: 22rem;
+  margin-top: -10rem;
+}
+
+.my-work h2 {
   font-family: "Crete Round", sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 4rem;
   line-height: 5.2rem;
   color: #091e42;
-  margin-left: 40rem;
-}
-
-.my-work img {
-  padding-bottom: 1rem;
+  padding: 12rem 2.4rem 2rem 2.4rem;
 }
 
 .line-top {
-  padding-bottom: 1rem;
-  width: 85rem;
+  padding: 0 2.4rem 8rem 2.4rem;
+  width: 95%;
 }
 
 .work-grid-box {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  margin: 0 30rem;
+  grid-template-columns: 1fr;
   gap: 4rem;
-  margin-bottom: 11rem;
+  margin: 0 2.4rem;
 }
 
 .first-box {
-  grid-column: 1 / span 3;
   display: flex;
+  flex-direction: column;
   gap: 2.4rem;
   align-content: flex-start;
 }
 
 .first-box img {
-  height: 44.8rem;
+  width: 100%;
 }
 
 .first-box-text h3 {
   font-family: "Crete Round", sans-serif;
   font-style: normal;
   font-weight: 400;
-  font-size: 4rem;
-  line-height: 5.2rem;
+  font-size: 3.2rem;
+  line-height: 4.4rem;
   color: #091e42;
   text-align: start;
+  padding-bottom: 2rem;
 }
 
 .first-box-text p {
   font-family: "Inter", sans-serif;
   font-style: normal;
   font-weight: 400;
-  font-size: 2rem;
-  line-height: 2.8rem;
+  font-size: 1.6rem;
+  line-height: 2.4rem;
   color: #091e42;
   text-align: start;
-  padding: 2rem 15rem 2rem 0;
 }
 
 .programming-languages {
@@ -237,10 +281,9 @@ body {
 
 .third-box {
   background-image: url("img/box1.png");
-  height: 44rem;
+  width: 100%;
 }
 
-/* change */
 .see-button-full {
   display: inline-block;
   background: #f55800;
@@ -264,7 +307,7 @@ body {
 
 .fourth-box {
   background-image: url("img/box2.png");
-  height: 44rem;
+  height: 38.6rem;
 }
 
 .fourth-box h3,
@@ -275,7 +318,7 @@ body {
   font-size: 3.2rem;
   line-height: 4.4rem;
   color: rgb(255, 255, 255);
-  margin-top: 17.8rem;
+  margin-top: 8.4rem;
   padding-left: 2rem;
 }
 
@@ -284,11 +327,10 @@ body {
   font-family: "Inter", sans-serif;
   font-style: normal;
   font-weight: 400;
-  font-size: 1.7rem;
+  font-size: 1.6rem;
   line-height: 2.4rem;
   color: rgb(255, 255, 255);
   padding-left: 2rem;
-  padding-right: 0.5rem;
 }
 
 .fourth-box ul,
@@ -326,15 +368,19 @@ body {
 
 .fifth-box {
   background-image: url("img/box3.png");
-  height: 44rem;
+  height: 38.6rem;
 }
 
 .fifth-box h3 {
-  margin-top: 22rem;
+  margin-top: 13rem;
 }
 
 .row-two-box {
   background-image: url("img/box4.png");
+}
+
+.last-work {
+  margin-bottom: 8rem;
 }
 
 .about-me {
@@ -345,17 +391,9 @@ body {
 .top-about-me {
   display: flex;
   justify-content: space-between;
-  padding: 10rem 0 0 0;
-  margin: 0;
-}
-
-.last-bg {
-  width: 67.3rem;
-}
-
-.text-about-me {
-  margin-left: 20rem;
-  max-width: 56.6rem;
+  flex-direction: column;
+  padding: 0;
+  margin: 0 2.4rem;
 }
 
 .text-about-me h3 {
@@ -365,15 +403,15 @@ body {
   font-size: 7.2rem;
   line-height: 8.2rem;
   color: #f55800;
-  padding-top: 3rem;
+  padding-top: 12rem;
 }
 
 .text-about-me p {
   font-family: "Inter", sans-serif;
   font-style: normal;
   font-weight: 400;
-  font-size: 2rem;
-  line-height: 3.2rem;
+  font-size: 1.6rem;
+  line-height: 2.4rem;
   color: #f4f5f7;
   padding-top: 5rem;
   padding-bottom: 5rem;
@@ -399,34 +437,39 @@ body {
   background-color: white;
 }
 
-.about-me-line {
-  width: 142.6rem;
-  margin: 18rem 0 15rem 20rem;
-  color: white;
+.last-bg {
+  display: inline-block;
+  width: 130%;
+  height: 300%;
+  margin-left: 19rem;
+  margin-bottom: 2rem;
 }
 
-.rectangular {
-  padding-top: 2rem;
+.about-me-line {
+  width: 87%;
+  color: white;
+  margin: 0 2.4rem 13.6rem 2.4rem;
 }
 
 .language-box {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: 1fr;
   justify-content: center;
-  margin: 0 14rem;
   justify-items: center;
   list-style: none;
+  gap: 2rem;
 }
 
 .language-item {
   display: flex;
   flex-direction: column;
+  align-items: center;
   list-style: none;
   font-family: "Inter", sans-serif;
   font-style: normal;
   font-weight: 350;
   font-size: 2.2rem;
-  line-height: 4rem;
+  line-height: 4.3rem;
   color: white;
 }
 
@@ -444,34 +487,39 @@ body {
   padding-top: 2rem;
 }
 
+.rectangular {
+  padding-bottom: 0.4rem;
+}
+
 .contact-me {
   display: grid;
-  grid-template-columns: 45.5rem 68.4rem;
-  margin: 13.5rem 13.5rem 15rem 13.5rem;
-  row-gap: 2.4rem;
-  justify-content: space-around;
+  grid-template-columns: 1fr;
+  justify-content: center;
+  margin: 12rem 2.4rem 0 2.4rem;
 }
 
 .contact-me h3 {
   font-family: "Inter", sans-serif;
   font-style: normal;
   font-weight: 700;
-  font-size: 4rem;
-  line-height: 5.2rem;
+  font-size: 3.2rem;
+  line-height: 4.4rem;
   color: #262626;
+  text-align: center;
 }
 
 #name {
   border: none;
   border-bottom: 1px solid #dbd8d7;
-  width: 68.4rem;
+  width: 100%;
   padding: 1rem 1rem 1rem 1.5rem;
+  margin-top: 5rem;
 }
 
 #email {
   border: none;
   border-bottom: 1px solid #dbd8d7;
-  width: 68.4rem;
+  width: 100%;
   padding: 1rem 1rem 1rem 1.5rem;
   margin-top: 2rem;
 }
@@ -480,7 +528,7 @@ body {
   background: #fbf8f7;
   border: none;
   margin: 2rem 2rem 2rem 0;
-  width: 68.4rem;
+  width: 100%;
   height: 11.4rem;
 }
 
@@ -494,11 +542,12 @@ body {
   font-weight: 700;
   font-size: 1.7rem;
   line-height: 2.4rem;
-  text-align: center;
   color: white;
   border: none;
   padding: 1rem;
   background: #f55800;
+  display: flex;
+  margin: auto;
 }
 
 .get-in-touch:hover,
@@ -511,6 +560,7 @@ body {
 
 .last-line {
   color: #fbf8f7;
+  margin-top: 13.6rem;
 }
 
 .icons {
@@ -523,46 +573,4 @@ body {
   color: #505f79;
   font-size: 2rem;
   padding: 2rem 1.5rem;
-}
-
-.phone-toolbar ul {
-  display: flex;
-  list-style: none;
-  height: 14rem;
-  width: 100%;
-  background: #3c3a39;
-  justify-content: space-between;
-  align-items: center;
-  position: absolute;
-}
-
-.logo-name {
-  width: 7.7rem;
-  height: 2.4rem;
-  font-style: normal;
-  font-weight: 700;
-  font-size: 5rem;
-  line-height: 2.4rem;
-  display: flex;
-  align-items: center;
-  text-align: center;
-  color: white;
-  text-decoration: none;
-  padding-left: 7rem;
-}
-
-.menu-button {
-  font-size: 6rem;
-  height: 12rem;
-  width: 14rem;
-  background-color: #3c3a39;
-  color: white;
-  border: none;
-  display: flex;
-  align-items: center;
-  text-align: center;
-}
-
-.phone-toolbar {
-  display: none;
 }
