--- a/queries.css
+++ b/queries.css
@@ -1,417 +1,375 @@
-/* @media (max-width: 111.6em) {
-  html {
-    font-size: 9px;
-  }
-}
-
-@media (max-width: 93em) {
-  html {
-    font-size: 8px;
-  }
-}
-
-@media (max-width: 88em) {
-  html {
-    font-size: 7px;
-  }
-
-  .main-page img {
-    margin-left: 30rem;
-  }
-}
-
-@media (max-width: 76em) {
-  html {
-    font-size: 6.8px;
-  }
-
-  .first-box-text p {
-    padding: 2rem 10rem 0 0;
-  }
-
-  .programming-boxes {
-    margin-bottom: 6rem;
-  }
-}
-
-@media (max-width: 69em) {
-  html {
-    font-size: 5.8px;
-  }
-
-  .line-top {
-    width: 80rem;
-  }
-}
-
-@media (max-width: 59em) {
-  html {
-    font-size: 5.5px;
-  }
-}
-
-@media (max-width: 56em) {
-  html {
-    font-size: 5.1px;
-  }
-}
-
-@media (max-width: 51em) {
-  html {
-    font-size: 4.8px;
-  }
-}
-
-@media (max-width: 51em) {
-  html {
-    font-size: 4.7px;
-  }
-
-  .first-box-text p {
-    padding: 2rem 5rem 2rem 0;
-  }
-}
-
-@media (max-width: 48em) {
-  html {
-    font-size: 4.8px;
-  }
-
-  .header {
+@media (min-width: 768px) {
+  .phone-toolbar {
     display: none;
   }
 
-  .phone-toolbar {
+  .header {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    background: #3e3c3c;
+    height: 7.2rem;
+    padding: 0;
+    width: 100%;
+    position: relative;
+  }
+
+  .main-nav-list {
+    list-style: none;
+    display: flex;
+    align-items: center;
+    gap: 3.2rem;
+  }
+
+  .header-name {
+    color: white;
+    text-decoration: none;
+    font-family: "Inter", sans-serif;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 20px;
+  }
+
+  .header-name:link,
+  .header-name:visited {
+    transition: all 0.4s;
+  }
+
+  .header-name:hover,
+  .header-name:active {
+    color: #cf711f;
+  }
+
+  .main-nav-link:link,
+  .main-nav-link:visited {
     display: inline-block;
+    text-decoration: none;
+    color: white;
+    font-weight: 500;
+    font-size: 1.8rem;
+    transition: all 0.4s;
+  }
+
+  .main-nav-link:hover,
+  .main-nav-link:active {
+    color: #cf711f;
   }
 
   .main-page {
     display: grid;
-    grid-template-columns: 1fr;
+    grid-template-columns: 1fr 6fr 7fr;
+    align-items: center;
     margin: 0;
     padding: 0;
     background: #1c1a19;
-    align-items: center;
-    justify-content: center;
-  }
-
-  .main-page img {
-    margin-left: 120rem;
-    width: 40rem;
-    height: 50rem;
-  }
-
-  .social-icons {
-    order: 1;
-    flex-direction: row;
-    gap: 4rem;
-    padding-left: 20rem;
-    margin-top: -40rem;
-    margin-bottom: 20rem;
-  }
-
-  .social-icon-item {
-    color: #cfcfcf;
-    width: 3.4rem;
-    height: 10rem;
-    font-size: 5rem;
   }
 
   .main-text {
-    padding-left: 10rem;
-    padding-top: 25rem;
+    order: 0;
+  }
+
+  .social-icons {
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+    align-items: center;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    padding-top: 2rem;
   }
 
   .main-text h1 {
-    font-weight: 400;
-    font-size: 10rem;
-  }
-
-  .main-text h2 {
-    font-size: 5rem;
-    padding-top: 4rem;
-  }
-
-  .main-text p {
-    font-size: 3.5rem;
-    padding-top: 4rem;
-    padding-right: 50rem;
+    font-size: 4rem;
     line-height: 5rem;
   }
 
-  .my-work h2 {
+  .main-text h2 {
+    font-size: 1.8rem;
+    line-height: 2.8rem;
+  }
+
+  .main-text p {
+    font-size: 1.2rem;
+    line-height: 2rem;
+  }
+
+  .main-text h1,
+  .main-text p,
+  .main-text h2 {
+    padding-left: 5rem;
+  }
+
+  .main-page img {
     display: inline-block;
-    margin: 25rem 5rem 5rem 40rem;
-    font-size: 10rem;
-    line-height: 5.2rem;
+    width: 95%;
+    height: 126%;
+    margin-left: 3rem;
+    margin-top: -18rem;
+    padding-top: 10rem;
+    padding-left: 3rem;
+    z-index: auto;
+  }
+
+  .wrapper-1 {
+    display: flex;
+    width: 100%;
+  }
+
+  .my-work h2 {
+    font-size: 3rem;
+    line-height: 4rem;
+    margin-top: 16rem;
+    padding: 0 2rem 8rem 6rem;
   }
 
   .line-top {
-    padding-bottom: 1rem;
-    width: 122rem;
-    padding-left: 39rem;
+    display: none;
+  }
+
+  .wrapper-1 hr {
+    display: inline-block;
+    width: 40%;
+    border: none;
+    margin-top: 18.5rem;
+    border-top: 1px solid #212121;
+  }
+
+  .my-work {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
 
   .work-grid-box {
-    display: grid;
-    grid-template-columns: 1fr;
-    margin: 5rem 30rem;
-    gap: 4rem;
-    margin-bottom: 11rem;
-  }
-
-  .first-box img {
-    height: 65rem;
+    grid-template-columns: 1fr 1fr 1fr;
+    margin: 0 4rem;
+    column-gap: 1rem;
+    width: 75%;
+    margin-left: -10rem;
   }
 
   .first-box {
-    grid-column: 1;
-    display: flex;
-    flex-direction: column;
-  }
-
-  .first-box-text h3 {
-    font-size: 8rem;
-    padding-top: 4rem;
-  }
-
-  .first-box-text p {
-    font-size: 4rem;
-    line-height: 7rem;
-    padding: 5rem 0 5rem 0;
+    grid-column: 1 / span 3;
+    flex-direction: row;
   }
 
   .programming-languages {
-    display: flex;
-    list-style: none;
-    gap: 5rem;
     margin: 3rem 0 3rem 0;
-  }
-
-  .pr-lang-items {
-    font-size: 3.5rem;
-    padding: 4rem;
-    margin-bottom: 4rem;
-  }
-
-  .see-button {
-    font-size: 4rem;
-    line-height: 2.4rem;
-    padding: 3rem;
-  }
-
-  .third-box,
-  .fourth-box,
-  .fifth-box {
-    height: 88rem;
-    width: 77rem;
-    margin-left: 15rem;
-  }
-
-  .see-button-full {
-    font-size: 3.8rem;
-    padding: 2.8rem 0 2.8rem;
-    margin-top: 83rem;
-  }
-
-  .fourth-box h3,
-  .fifth-box h3 {
-    font-size: 6.4rem;
-    line-height: 8.8rem;
-    margin-top: 32.6rem;
   }
 
   .fourth-box p,
   .fifth-box p {
-    font-size: 3.2rem;
-    line-height: 4.8rem;
-    padding-left: 2rem;
-    padding-right: 2rem;
-    margin-bottom: 15rem;
+    font-size: 1.3rem;
+    line-height: 2.2rem;
   }
 
-  .programming-boxes a {
-    font-size: 3rem;
-    line-height: 4rem;
+  .see-button-full {
+    margin-top: 33.8rem;
+    width: 100%;
+  }
+
+  .programming-boxes {
+    padding: 0.5rem;
+    margin-bottom: 10rem;
   }
 
   .top-about-me {
-    flex-direction: column;
-  }
-
-  .last-bg {
-    margin-left: 120rem;
-    width: 50rem;
-  }
-
-  .text-about-me {
-    margin-left: 40rem;
-    max-width: 105rem;
-  }
-
-  .text-about-me h3 {
-    font-size: 14.4rem;
-    line-height: 16rem;
-  }
-
-  .text-about-me p {
-    font-size: 4rem;
-    line-height: 6.4rem;
-  }
-
-  .text-about-me a {
-    font-size: 3.4rem;
-    padding: 2.4rem;
-    margin-top: 10rem;
-  }
-
-  .about-me-line {
-    width: 120rem;
-    margin: 9rem 0 12rem 20rem;
-  }
-
-  .language-box {
-    grid-template-columns: 1fr;
-    margin: 0 14rem;
-  }
-
-  .language-text-heading {
-    font-size: 6.4rem;
-    line-height: 8.8rem;
-  }
-
-  .language-item {
-    font-size: 3.5rem;
-    line-height: 8rem;
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
+    padding: 0;
+    margin: 0 8rem;
     align-items: center;
   }
 
+  .last-bg {
+    width: 75%;
+    height: 100%;
+    margin-left: -6rem;
+    margin-bottom: 2rem;
+    margin-right: -19rem;
+    padding-left: 16rem;
+  }
+
+  .about-me-line {
+    width: 80%;
+    color: white;
+    margin: 13.9rem 8rem 13.6rem 8rem;
+  }
+
+  .language-box {
+    grid-template-columns: 1fr 1fr 1fr;
+    margin: 0 4rem;
+  }
+
+  .language-item {
+    align-items: flex-start;
+  }
+
   .contact-me {
-    grid-template-columns: 1fr;
-    margin: 13.5rem 13.5rem 15rem 13.5rem;
-    justify-content: space-around;
+    display: grid;
+    grid-template-columns: 2fr 3fr;
+    justify-content: center;
+    margin: 12rem 8rem 0 8rem;
+    gap: 2rem;
   }
 
   .contact-me h3 {
-    font-size: 8rem;
-    line-height: 10.4rem;
-    text-align: center;
-    margin-left: 27rem;
-    margin-right: 20rem;
-  }
-
-  .footer-form {
-    text-align: center;
-  }
-
-  #name {
-    width: 120rem;
-    padding: 2rem 2rem 2rem 3rem;
-  }
-
-  #email {
-    width: 120rem;
-    padding: 2rem 2rem 2rem 3rem;
-    margin-top: 4rem;
-  }
-
-  #textarea {
-    margin: 6rem 4rem 4rem 4rem;
-    width: 120rem;
-    height: 22.8rem;
-  }
-
-  #textarea::placeholder {
-    padding: 1rem;
-  }
-
-  .get-in-touch {
-    font-size: 3.5rem;
-    line-height: 4.8rem;
-    padding: 3rem;
-  }
-
-  .icons-last {
-    font-size: 4rem;
-    padding: 4rem 3rem;
-  }
-}
-
-@media (max-width: 45em) {
-  html {
-    font-size: 4.8px;
-  }
-
-  .main-page img {
-    margin-left: 110rem;
-    width: 40rem;
-    height: 50rem;
-  }
-
-  .last-bg {
-    margin-left: 110rem;
-    width: 50rem;
-  }
-
-  .text-about-me {
-    margin-left: 28rem;
-    max-width: 105rem;
-  }
-}
-
-@media (max-width: 41em) {
-  html {
-    font-size: 4.8px;
-  }
-
-  .main-page img {
-    margin-left: 100rem;
-  }
-
-  .last-bg {
-    margin-left: 110rem;
-    width: 50rem;
-  }
-
-  .text-about-me {
-    margin-left: 20rem;
-    max-width: 100rem;
-  }
-
-  .work-grid-box {
-    margin: 5rem;
-  }
-
-  .first-box {
-    grid-column: 1;
-    display: flex;
-    gap: 2.4rem;
-    align-content: flex-start;
-  }
-
-  .first-box img {
-    height: 44.8rem;
-  }
-
-  .first-box-text h3 {
-    line-height: 4rem;
     text-align: start;
   }
 
+  #name {
+    margin-top: 0;
+  }
+
+  .get-in-touch {
+    display: inline-block;
+    margin: auto;
+  }
+
+  .fourth-box p,
+  .fifth-box p {
+    font-size: 1.6rem;
+  }
+}
+
+@media (min-width: 800px) {
+  .work-grid-box {
+    grid-template-columns: 1fr 1fr 1fr;
+    margin: 0 8rem;
+    column-gap: 1rem;
+    width: 80%;
+  }
+}
+
+@media (min-width: 950px) {
+  .work-grid-box {
+    grid-template-columns: 1fr 1fr 1fr;
+    margin: 0 10rem;
+    column-gap: 1rem;
+    width: 85%;
+  }
+}
+
+@media (min-width: 1000px) {
+  .my-work h2 {
+    padding: 0 2rem 14rem 14rem;
+  }
+
+  .main-text h1 {
+    font-size: 6rem;
+    line-height: 8.2rem;
+  }
+
+  .main-text h2 {
+    font-size: 3.2rem;
+    line-height: 4.4rem;
+  }
+
+  .main-text p {
+    font-size: 1.8rem;
+    line-height: 3rem;
+  }
+
+  .first-box img {
+    width: 200%;
+  }
+
+  .work-grid-box {
+    grid-template-columns: 1fr 1fr 1fr;
+    margin: 0 14rem;
+    width: 80%;
+  }
+
+  .programming-boxes {
+    padding: 0.5rem;
+    margin-bottom: 5rem;
+  }
+}
+
+@media (min-width: 1178px) {
+  .main-page {
+    display: grid;
+    grid-template-columns: 1fr 6fr 7fr;
+    align-items: center;
+    margin: 0;
+    padding: 0;
+    background: #1c1a19;
+  }
+
+  .my-work h2 {
+    margin-top: 16rem;
+    padding: 0 2rem 8rem 14rem;
+  }
+
+  .wrapper-1 hr {
+    display: inline-block;
+    width: 50%;
+    border: none;
+    margin-top: 18.5rem;
+    border-top: 1px solid #212121;
+  }
+
+  .work-grid-box {
+    grid-template-columns: 1fr 1fr 1fr;
+    width: 80%;
+    margin: 0 14rem;
+  }
+
+  .first-box {
+    grid-column: 1 / span 3;
+    flex-direction: row;
+  }
+
+  .programming-languages {
+    margin: 3rem 0 3rem 0;
+  }
+
+  .first-box img {
+    width: 200%;
+  }
+
   .first-box-text p {
-    padding: 2rem 5rem 2rem 0;
+    padding-right: 20rem;
   }
 
-  .pr-lang-items {
-    font-size: 1rem;
-    line-height: 1.5rem;
+  .top-about-me {
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
+    padding: 0;
+    margin: 0 14rem;
+    align-items: center;
   }
 
-  .third-box,
-  .fourth-box,
-  .fifth-box {
-    height: 88rem;
-    width: 77rem;
-    margin-left: 13rem;
+  .about-me-line {
+    width: 70%;
+    color: white;
+    margin: 13.9rem 14rem 13.6rem 14rem;
   }
-} */
+
+  .language-box {
+    grid-template-columns: 1fr 1fr 1fr;
+    margin: 0 8rem;
+  }
+}
+
+@media (min-width: 1423px) {
+  .work-grid-box {
+    width: 75%;
+  }
+}
+
+@media (min-width: 1538px) {
+  .work-grid-box {
+    margin: 0 18rem;
+    column-gap: 2rem;
+    width: 63%;
+  }
+
+  .about-me-line {
+    width: 50%;
+  }
+}
