Correct stylelint error

--- a/style.css
+++ b/style.css
@@ -313,7 +313,7 @@ body {
 
 .programming-boxes {
   border: 1px solid #4f4e4e;
-  background: #ffffff;
+  background: white;
   padding: 1rem;
   margin-bottom: 4rem;
 }
