--- a/style.css
+++ b/style.css
@@ -19,6 +19,102 @@ body {
   display: none;
 }
 
+.mobile-popup {
+  display: none;
+  position: absolute;
+  top: 2.5rem;
+  left: 2.5rem;
+  z-index: 99;
+  background-color: white;
+  width: 90%;
+  padding: 16px;
+}
+
+.mobile-popup h3 {
+  display: inline-block;
+  font-family: 'Roboto', sans-serif;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 32px;
+  line-height: 44px;
+  color: #172B4D;
+}
+
+.x-button {
+  color: #67798E;
+  font-size: 25px;
+}
+
+.pop-languages {
+  list-style: none;
+  display: flex;
+  gap: 2rem;
+  margin: 4rem 0 3.4rem 0;
+}
+
+.pop-pr-l {
+  border: 1px solid #DFE1E6;
+  padding: 10px; 
+}
+
+.pop-languages li a {
+  text-decoration: none;
+  font-family: 'Poppins', sans-serif;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 13px;
+  line-height: 16px;
+  color: #3C3A39;
+}
+
+.contaier {
+  display: flex;
+  justify-content: space-between;
+}
+
+.pop-img {
+  width: 100%;
+}
+
+.mobile-popup p {
+  font-family: 'Inter', sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+  color: #344563;
+  margin-top: 3.4rem;
+}
+
+.pop-buttons {
+  display: flex;
+  justify-content: space-between;
+}
+
+.pop-button {
+  background: #FF6B00;
+  padding: 12px;
+  margin: 2rem 0;
+}
+
+.pop-button a {
+  font-family: 'Inter', sans-serif;
+font-style: normal;
+font-weight: 700;
+font-size: 17px;
+line-height: 24px;
+text-decoration: none;
+color: white;
+padding-left: 5px;
+padding-bottom: 5px;
+}
+
+.icons-pop {
+  color: white;
+  font-size: 2rem;
+  margin: 2px 5px 0 8px;
+}
+
 .responsive {
   display: none;
   flex-direction: column;
