--- a/style.css
+++ b/style.css
@@ -15,13 +15,23 @@ body {
   color: #555;
 }
 
+.blur-add {
+  filter: blur(8px);
+  -webkit-filter: blur(8px);
+}
+
+.blur-remove {
+  filter: none;
+  -webkit-filter: none;
+}
+
 .header {
   display: none;
 }
 
 .mobile-popup {
   display: none;
-  position: absolute;
+  position: fixed;
   top: 2.5rem;
   left: 2.5rem;
   z-index: 99;
@@ -37,11 +47,11 @@ body {
   font-weight: 700;
   font-size: 32px;
   line-height: 44px;
-  color: #172B4D;
+  color: #172b4d;
 }
 
 .x-button {
-  color: #67798E;
+  color: #67798e;
   font-size: 25px;
 }
 
@@ -53,18 +63,8 @@ body {
 }
 
 .pop-pr-l {
-  border: 1px solid #DFE1E6;
-  padding: 10px; 
-}
-
-.pop-languages li a {
-  text-decoration: none;
-  font-family: 'Poppins', sans-serif;
-  font-style: normal;
-  font-weight: 600;
-  font-size: 13px;
-  line-height: 16px;
-  color: #3C3A39;
+  border: 1px solid #dfe1e6;
+  padding: 10px;
 }
 
 .contaier {
@@ -92,21 +92,21 @@ body {
 }
 
 .pop-button {
-  background: #FF6B00;
+  background: rgb(255, 107, 0);
   padding: 12px;
   margin: 2rem 0;
 }
 
 .pop-button a {
   font-family: 'Inter', sans-serif;
-font-style: normal;
-font-weight: 700;
-font-size: 17px;
-line-height: 24px;
-text-decoration: none;
-color: white;
-padding-left: 5px;
-padding-bottom: 5px;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 17px;
+  line-height: 24px;
+  text-decoration: none;
+  color: white;
+  padding-left: 5px;
+  padding-bottom: 5px;
 }
 
 .icons-pop {
