--- a/style.css
+++ b/style.css
@@ -32,8 +32,9 @@ body {
 .mobile-popup {
   display: none;
   position: fixed;
-  top: 2.5rem;
+  top: 2rem;
   left: 2.5rem;
+  bottom: 2rem;
   z-index: 99;
   background-color: white;
   width: 90%;
@@ -67,6 +68,14 @@ body {
   padding: 10px;
 }
 
+.pop-pr-l a {
+  text-decoration: none;
+  color: #3c3a39;
+  font-weight: 600;
+  font-size: 13px;
+  line-height: 16px;
+}
+
 .contaier {
   display: flex;
   justify-content: space-between;
@@ -80,8 +89,8 @@ body {
   font-family: 'Inter', sans-serif;
   font-style: normal;
   font-weight: 400;
-  font-size: 16px;
-  line-height: 24px;
+  font-size: 12px;
+  line-height: 20px;
   color: #344563;
   margin-top: 3.4rem;
 }
@@ -101,8 +110,8 @@ body {
   font-family: 'Inter', sans-serif;
   font-style: normal;
   font-weight: 700;
-  font-size: 17px;
-  line-height: 24px;
+  font-size: 15px;
+  line-height: 20px;
   text-decoration: none;
   color: white;
   padding-left: 5px;
